tests/invalid_typecheck/test_tc_gt_left_bool.aphi
/*
Type-check error: Invalid operand for '>' (expected int, got bool).
Left operand of '>' is bool.
*/

bool b;
int x;
bool r;

procedure main {
    b = true;
    x = 5;
    r = b > x;
}
